[package]
name = "byteripper"
version = "0.1.2"
authors = ["Frank Denis <github@pureftpd.org>"]
edition = "2018"
description = "A tool to extract the binary code from every function in a library"
readme = "README.md"
license = "MIT"
homepage = "https://github.com/jedisct1/byteripper"
repository = "https://github.com/jedisct1/byteripper"

[dependencies]
clap = { version = "3.0.14", default-features = false, features = [
    "std",
    "cargo",
    "wrap_help",
] }
anyhow = "1"
goblin = "0.4.3"
libloading = "0.7.0"
thiserror = "1"
