[package]
name = "byteripper"
version = "0.1.3"
authors = ["Frank Denis <github@pureftpd.org>"]
edition = "2018"
description = "A tool to extract the binary code from every function in a shared library"
readme = "README.md"
license = "MIT"
homepage = "https://github.com/jedisct1/byteripper"
repository = "https://github.com/jedisct1/byteripper"

[dependencies]
clap = { version = "3.2.25", default-features = false, features = [
    "std",
    "cargo",
    "wrap_help",
] }
anyhow = "1"
goblin = "0.9.2"
libloading = "0.8.6"
thiserror = "2"
