[package]
name = "byteripper"
version = "0.1.2"
authors = ["Frank Denis <github@pureftpd.org>"]
edition = "2018"
description = "A tool to extract the binary code from every function in a library"
readme = "README.md"
license = "MIT"
homepage = "https://github.com/jedisct1/byteripper"
repository = "https://github.com/jedisct1/byteripper"

[dependencies]
clap = { version = "4.5.56", default-features = false, features = [
    "std",
    "help",
    "usage",
    "error-context",
    "wrap_help",
] }
anyhow = "1.0.100"
goblin = "0.10.4"
libloading = "0.9.0"
thiserror = "2.0.18"
